Add /api/me/
Fixes #45
