# swagger.json
@@ -26,6 +26,25 @@
         }
     ],
     "paths": {
+        "/me/": {
+            "get": {
+                "operationId": "me_read",
+                "description": "",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/Me"
+                        }
+                    }
+                },
+                "tags": [
+                    "me"
+                ]
+            },
+            "parameters": []
+        },
         "/organizations/": {
             "get": {
                 "operationId": "organizations_list",
@@ -368,6 +387,7 @@
             }
         },
         "Organization": {
+            "title": "Default organization",
             "description": "Organization(id, name, logo, background_color, banner, number_of_seats, is_default, parent, appearance, created_at, updated_at)",
             "required": [
                 "name"
@@ -417,6 +437,30 @@
                 },
                 "appearance": {
                     "$ref": "#/definitions/OrganizationApperance"
+                }
+            }
+        },
+        "Me": {
+            "description": "User(id, password, last_login, is_superuser, first_name, last_name, email, is_staff, is_active, date_joined, username, is_supermanager)",
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "title": "First name",
+                    "type": "string",
+                    "maxLength": 150
+                },
+                "last_name": {
+                    "title": "Last name",
+                    "type": "string",
+                    "maxLength": 150
+                },
+                "flags": {
+                    "title": "Flags",
+                    "type": "string",
+                    "readOnly": true
+                },
+                "default_organization": {
+                    "$ref": "#/definitions/Organization"
                 }
             }
         },
